# GLTester

./: .gitignore  CMakeLists.txt  Drawable.cpp  Drawable.h  Initializer.cpp  README.md  main.cpp
assets/shaders/: box.frags
src/: Drawable.cpp  Drawables.cpp  Drawables.h  Initializer.cpp  main.cpp
src/utils/: ScopedMutex.h  glmUtils.hpp  shader.cpp  shader.hpp  strUtils.h
